+ Fixed issue with the text uppercase + Added spacing to the end of the form

--- a/src/components/form-view/form-view.scss
+++ b/src/components/form-view/form-view.scss
@@ -1,6 +1,6 @@
 $barcode-fill-color: #f0f0f0;
 
-form-view, .form-view{
+form-view, .form-view {
 	.selection{
 		ion-item{
 			display: flex;
@@ -107,8 +107,14 @@ form-view, .form-view{
   }
 
   .spacer{
-	width: 1.5px;
-	background-color: lightgray;
-	margin: 5px;
-  }
+		width: 1.5px;
+		background-color: lightgray;
+		margin: 5px;
+	}
+	
+	.spacing {
+		display: block;
+		width: 100%;
+		height: 150px;
+	}
 }
